# UET_RE_AMR

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: firmware_build.yml  lint.yml  ros2_build.yml
docker/ros2/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: d435i_guide.md  getting_started.md
firmware/base_controller/: README.md  platformio.ini
firmware/base_controller/include/: controlMotor.h  encoder.h  motor_controller.h  odom.h  odometry.h  protocol.h
firmware/base_controller/src/: controlMotor.cpp  encoder.cpp  main.cpp  motor_controller.cpp  odom.cpp  odometry.cpp  protocol.cpp
firmware/power_management/: platformio.ini
firmware/protocols/: serial_protocol.md
firmware/sensor_hub/: platformio.ini
hardware/: README.md
ros2/src/AGV_Robot_Model_description/meshes/: br_caster_wheel_1.stl
ros2/src/AGV_Robot_Model_description/urdf/: AGV_Robot_Model.gazebo  AGV_Robot_Model.xacro  materials.xacro
ros2/src/uet_amr_bringup/: CMakeLists.txt  package.xml
ros2/src/uet_amr_bringup/launch/: amr_bringup.launch.py  amr_simulation.launch.py
ros2/src/uet_amr_description/: CMakeLists.txt  package.xml  setup.py
ros2/src/uet_amr_description/AGV_Robot_Model_description/: package.xml  setup.py
ros2/src/uet_amr_description/AGV_Robot_Model_description/launch/: display.launch.py  gazebo.launch.py
ros2/src/uet_amr_description/AGV_Robot_Model_description/meshes/: br_caster_1.stl  fl_caster_wheel__1__1.stl  left_wheel_1.stl
ros2/src/uet_amr_description/AGV_Robot_Model_description/urdf/: AGV_Robot_Model.trans
ros2/src/uet_amr_description/config/: controllers.yaml
ros2/src/uet_amr_description/launch/: display.launch.py  gazebo.launch.py
ros2/src/uet_amr_description/meshes/: bl_caster_1.stl  bl_caster_wheel_1.stl  fl_caster_1.stl  fr_caster_1.stl  fr_caster_wheel_1.stl  right_wheel_1.stl
ros2/src/uet_amr_description/urdf/: amr_base.urdf.xacro  materials.xacro  sensors.urdf.xacro  uet_amr.gazebo  uet_amr.ros2control  uet_amr.trans  uet_amr.xacro
ros2/src/uet_amr_description/worlds/: test_place.sdf
ros2/src/uet_amr_hardware/: CMakeLists.txt  package.xml  uet_amr_hardware.xml
ros2/src/uet_amr_hardware/config/: ros2_control.yaml
ros2/src/uet_amr_hardware/include/uet_amr_hardware/: amr_hardware_interface.hpp
ros2/src/uet_amr_hardware/src/: amr_hardware_interface.cpp
ros2/src/uet_amr_msgs/: CMakeLists.txt  package.xml
ros2/src/uet_amr_msgs/action/: NavigateTo.action
ros2/src/uet_amr_msgs/msg/: BatteryStatus.msg  MotorStatus.msg  WheelOdom.msg
ros2/src/uet_amr_msgs/srv/: SetVelocity.srv
ros2/src/uet_amr_navigation/: CMakeLists.txt  package.xml
ros2/src/uet_amr_navigation/config/: nav2_params.yaml  slam_params.yaml
ros2/src/uet_amr_perception/: CMakeLists.txt  package.xml
ros2/src/uet_amr_simulation/: CMakeLists.txt  package.xml
ros2/src/uet_amr_simulation/launch/: gazebo.launch.py
ros2/src/uet_amr_simulation/worlds/: warehouse.sdf
ros2/src/uet_amr_teleop/: CMakeLists.txt  package.xml
simulation/gazebo/worlds/: warehouse.world
tools/: setup.sh  start_microros_agent.sh
