<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uet_amr_simulation</name>
  <version>0.1.0</version>
  <description>Simulation files and environments for UET AMR</description>
  <maintainer email="robotics@uet.vnu.edu.vn">UET Robotics Club</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>uet_amr_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
